--- a/MARS_environment_linux.yml
+++ b/MARS_environment_linux.yml
@@ -1,4 +1,4 @@
-name: mars_p3
+name: mars
 channels:
   - conda-forge
   - anaconda
@@ -125,5 +125,4 @@ dependencies:
   - wheel=0.31.0=py36_3
   - xz=5.2.5=h14c3975_0
   - zlib=1.2.11.1=h14c3975_1
-prefix: /home/djalab/anaconda3/envs/mars_p3
 
