Feature/ann release cleanup (#2)
* fixed path to seqIo

* setting up install documentation

* Update README.md

* Update install_windows_nvidia.md

* Update install_linux_nvidia.md

* adding install files and instructions

* remaining edits to install instructions

* wording

--- a/MARS_environment_linux.yml
+++ b/MARS_environment_linux.yml
@@ -1,4 +1,4 @@
-name: mars_p3
+name: mars
 channels:
   - conda-forge
   - anaconda
@@ -126,4 +126,3 @@ dependencies:
   - xz=5.2.5=h14c3975_0
   - zlib=1.2.11.1=h14c3975_1
 prefix: /home/djalab/anaconda3/envs/mars_p3
-
