--- a/MARS_environment_linux.yml
+++ b/MARS_environment_linux.yml
@@ -1,19 +1,18 @@
 name: mars
 channels:
-  - conda-forge
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
   - _py-xgboost-mutex=2.0
   - _tflow_select=2.1.0
-  - absl-py=0.10.0
+  - absl-py=0.11.0
   - astor=0.8.1
   - blas=1.0
-  - bzip2=1.0.8
   - c-ares=1.16.1
-  - ca-certificates=2020.7.22
-  - cairo=1.14.12
+  - ca-certificates=2020.10.14
   - certifi=2020.6.20
   - cloudpickle=1.6.0
   - cudatoolkit=10.0.130
@@ -21,91 +20,93 @@ dependencies:
   - cupti=10.0.130
   - cycler=0.10.0
   - cytoolz=0.11.0
-  - dask-core=2.27.0
-  - dbus=1.13.16
+  - dask-core=2.30.0
+  - dbus=1.13.6
   - decorator=4.4.2
   - dill=0.3.2
   - expat=2.2.9
-  - ffmpeg=4.0
-  - fontconfig=2.13.0
-  - freeglut=3.0.0
-  - freetype=2.10.2
+  - fontconfig=2.13.1
+  - freetype=2.10.4
   - gast=0.2.2
-  - glib=2.65.0
+  - gettext=0.19.8.1
+  - glib=2.66.2
   - google-pasta=0.2.0
-  - graphite2=1.3.14
   - grpcio=1.31.0
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - h5py=2.8.0
-  - harfbuzz=1.8.8
-  - hdf5=1.10.2
-  - icu=58.2
+  - gst-plugins-base=1.14.5
+  - gstreamer=1.14.5
+  - h5py=2.10.0
+  - hdf5=1.10.6
+  - icu=67.1
   - imageio=2.9.0
-  - importlib-metadata=1.7.0
+  - importlib-metadata=2.0.0
   - intel-openmp=2020.2
-  - jasper=2.0.14
-  - joblib=0.16.0
-  - jpeg=9b
+  - joblib=0.17.0
+  - jpeg=9d
   - keras-applications=1.0.8
   - keras-preprocessing=1.1.0
   - kiwisolver=1.2.0
+  - krb5=1.17.1
   - lcms2=2.11
-  - ld_impl_linux-64=2.33.1
+  - ld_impl_linux-64=2.35
+  - libclang=10.0.1
   - libedit=3.1.20191231
-  - libffi=3.3
-  - libgcc-ng=9.1.0
+  - libevent=2.1.10
+  - libffi=3.2.1
+  - libgcc-ng=9.3.0
   - libgfortran-ng=7.3.0
-  - libglu=9.0.0
-  - libopencv=3.4.2
-  - libopus=1.3.1
+  - libglib=2.66.2
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - libllvm10=10.0.1
   - libpng=1.6.37
-  - libprotobuf=3.12.4
-  - libstdcxx-ng=9.1.0
+  - libpq=12.3
+  - libprotobuf=3.13.0.1
+  - libstdcxx-ng=9.3.0
   - libtiff=4.1.0
-  - libuuid=1.0.3
-  - libvpx=1.7.0
-  - libxcb=1.14
+  - libuuid=2.32.1
+  - libxcb=1.13
   - libxgboost=0.90
+  - libxkbcommon=0.10.0
   - libxml2=2.9.10
+  - libxslt=1.1.33
   - lz4-c=1.9.2
-  - markdown=3.2.2
-  - matplotlib=3.3.1
+  - markdown=3.3.2
   - matplotlib-base=3.3.1
   - mkl=2020.2
   - mkl-service=2.3.0
   - mkl_fft=1.2.0
   - mkl_random=1.1.1
+  - mysql-common=8.0.21
+  - mysql-libs=8.0.21
   - ncurses=6.2
   - networkx=2.5
-  - numpy=1.19.1
-  - numpy-base=1.19.1
+  - nspr=4.29
+  - nss=3.58
+  - numpy=1.19.2
+  - numpy-base=1.19.2
   - olefile=0.46
-  - opencv=3.4.2
   - openssl=1.1.1h
   - opt_einsum=3.1.0
   - pcre=8.44
-  - pillow=7.2.0
-  - pip=20.2.2
-  - pixman=0.40.0
+  - pillow=8.0.0
+  - pip=20.2.4
   - progressbar=2.5
-  - protobuf=3.12.4
-  - py-opencv=3.4.2
+  - protobuf=3.13.0.1
+  - pthread-stubs=0.4
   - py-xgboost=0.90
   - pyparsing=2.4.7
-  - pyqt=5.9.2
-  - python=3.6.12
+  - pyside2=5.13.2
+  - python=3.7.8
   - python-dateutil=2.8.1
-  - python_abi=3.6
+  - python_abi=3.7
   - pywavelets=1.1.1
   - pyyaml=5.3.1
-  - qt=5.9.7
+  - qt=5.12.9
   - readline=8.0
-  - scikit-image=0.16.2
-  - scikit-learn=0.19.0
+  - scikit-image=0.17.2
+  - scikit-learn=0.23.2
   - scipy=1.5.2
   - setuptools=49.6.0
-  - sip=4.19.24
   - six=1.15.0
   - sk-video=1.1.10
   - sqlite=3.33.0
@@ -115,6 +116,8 @@ dependencies:
   - tensorflow-estimator=1.15.1
   - tensorflow-gpu=1.15.0
   - termcolor=1.1.0
+  - threadpoolctl=2.1.0
+  - tifffile=2020.10.1
   - tk=8.6.10
   - toolz=0.11.1
   - tornado=6.0.4
@@ -123,14 +126,17 @@ dependencies:
   - wheel=0.35.1
   - wrapt=1.12.1
   - xlwt=1.3.0
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
   - xz=5.2.5
   - yaml=0.2.5
-  - zipp=3.1.0
+  - zipp=3.3.1
   - zlib=1.2.11
-  - zstd=1.4.4
+  - zstd=1.4.5
   - pip:
     - colour-demosaicing==0.1.5
     - colour-science==0.3.15
     - hmmlearn==0.2.4
-prefix: /home/mras/miniconda3/envs/mars
+    - opencv-python==4.4.0.44
+prefix: /home/mars/miniconda3/envs/mars
 
