--- a/MARS_environment_mac_catalina.yml
+++ b/MARS_environment_mac_catalina.yml
@@ -138,5 +138,6 @@ dependencies:
     - colour-science==0.3.15
     - hmmlearn==0.2.4
     - opencv-python==4.4.0.44
+    - coremltools==4.0b4
 prefix: /home/mars/miniconda3/envs/mars
 
