New feature: automatically generate .mlmodel files on Mac if they're not present. Also updated version of coremltools from 4.0b4 to 4.0 (not beta)

--- a/MARS_environment_mac_catalina.yml
+++ b/MARS_environment_mac_catalina.yml
@@ -138,6 +138,6 @@ dependencies:
     - colour-science==0.3.15
     - hmmlearn==0.2.4
     - opencv-python==4.4.0.44
-    - coremltools==4.0b4
+    - coremltools==4.0
 prefix: /home/mars/miniconda3/envs/mars
 
