--- a/MARS_environment_windows.yml
+++ b/MARS_environment_windows.yml
@@ -11,20 +11,23 @@ dependencies:
   - astor=0.8.1
   - async-timeout=3.0.1
   - attrs=20.2.0
+  - backcall=0.2.0
   - blas=1.0
+  - bleach=3.3.0
   - blinker=1.4
   - blosc=1.20.1
   - brotli=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2020.10.14
+  - ca-certificates=2021.10.26
   - cachetools=4.1.1
-  - certifi=2020.6.20
+  - certifi=2020.12.5
   - cffi=1.14.3
   - chardet=3.0.4
   - charls=2.1.0
   - click=7.1.2
   - cloudpickle=1.6.0
+  - colorama=0.4.4
   - cryptography=3.1.1
   - cudatoolkit=10.0.130
   - cudnn=7.6.5
@@ -32,7 +35,12 @@ dependencies:
   - cytoolz=0.11.0
   - dask-core=2.30.0
   - decorator=4.4.2
+  - defusedxml=0.6.0
   - dill=0.3.2
+  - easydict=1.9
+  - entrypoints=0.3
+  - ffmpeg=4.2.2
+  - fonttools=4.25.0
   - freetype=2.10.4
   - gast=0.2.2
   - giflib=5.2.1
@@ -48,23 +56,36 @@ dependencies:
   - imagecodecs=2020.5.30
   - imageio=2.9.0
   - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
   - intel-openmp=2020.2
+  - ipykernel=5.3.4
+  - ipython=7.18.1
+  - ipython_genutils=0.2.0
+  - jedi=0.18.0
+  - jinja2=2.11.3
   - joblib=0.17.0
   - jpeg=9d
+  - json5=0.9.5
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.7
+  - jupyter_core=4.6.3
+  - jupyterlab=2.2.9
+  - jupyterlab_server=1.2.0
   - jxrlib=1.1
   - keras-applications=1.0.8
   - keras-preprocessing=1.1.0
-  - kiwisolver=1.2.0
   - lcms2=2.11
-  - lerc=2.2
+  - lerc=2.2.1
   - libaec=1.0.4
   - libblas=3.8.0
   - libcblas=3.8.0
   - libclang=10.0.1
   - libiconv=1.15
+  - liblapack=3.8.0
   - libopencv=3.4.2
   - libpng=1.6.37
   - libprotobuf=3.13.0.1
+  - libsodium=1.0.18
   - libtiff=4.1.0
   - libwebp-base=1.1.0
   - libxgboost=0.90
@@ -78,79 +99,104 @@ dependencies:
   - m2w64-gmp=6.1.0
   - m2w64-libwinpthread-git=5.0.0.4634.697f757
   - markdown=3.3.2
-  - matplotlib-base=3.3.2
+  - markupsafe=1.1.1
+  - matplotlib-base=3.5.0
+  - mistune=0.8.4
   - mkl=2020.2
   - mkl-service=2.3.0
   - mkl_fft=1.2.0
   - mkl_random=1.1.1
   - msys2-conda-epoch=20160418
   - multidict=4.7.6
+  - munkres=1.1.4
+  - nbconvert=5.6.0
+  - nbformat=5.1.2
   - networkx=2.5
-  - numpy=1.19.2
+  - notebook=5.7.10
   - numpy-base=1.19.2
   - oauthlib=3.1.0
   - olefile=0.46
   - opencv=3.4.2
   - openjpeg=2.3.1
-  - openssl=1.1.1h
+  - openssl=1.1.1l
   - opt_einsum=3.1.0
-  - pillow=8.0.1
+  - packaging=20.8
+  - pandas=1.2.4
+  - pandoc=2.11.4
+  - pandocfilters=1.4.2
+  - parso=0.8.0
+  - pickleshare=0.7.5
   - pip=20.2.4
   - progressbar=2.5
+  - prometheus_client=0.9.0
+  - prompt-toolkit=3.0.8
   - protobuf=3.13.0.1
   - py-opencv=3.4.2
   - py-xgboost=0.90
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.8
   - pycparser=2.20
+  - pygments=2.7.1
   - pyjwt=1.7.1
   - pyopenssl=19.1.0
   - pyparsing=2.4.7
+  - pyrsistent=0.17.3
   - pyside2=5.13.2
   - pysocks=1.7.1
   - python=3.7.8
-  - python-dateutil=2.8.1
+  - python-dateutil=2.8.2
   - python_abi=3.7
+  - pytz=2021.1
   - pywavelets=1.1.1
+  - pywin32=227
+  - pywinpty=0.5.7
   - pyyaml=5.3.1
+  - pyzmq=19.0.2
   - qt=5.12.9
   - requests=2.24.0
   - requests-oauthlib=1.3.0
   - rsa=4.6
   - scikit-image=0.17.2
-  - scikit-learn=0.22.0
+  - scikit-learn=0.22
   - scipy=1.5.2
-  - setuptools=50.3.0
-  - six=1.15.0
+  - send2trash=1.5.0
+  - six=1.16.0
   - sk-video=1.1.10
   - snappy=1.1.8
   - sqlite=3.33.0
-  - tensorboard=2.2.1
+  - tensorboard=2.4.1
   - tensorboard-plugin-wit=1.6.0
   - tensorflow=1.15.0
   - tensorflow-base=1.15.0
   - tensorflow-estimator=1.15.1
   - tensorflow-gpu=1.15.0
   - termcolor=1.1.0
+  - terminado=0.9.2
+  - testpath=0.4.4
   - threadpoolctl=2.1.0
   - tifffile=2020.10.1
   - tk=8.6.10
   - toolz=0.11.1
   - tornado=6.0.4
+  - traitlets=5.0.5
   - typing-extensions=3.7.4.3
   - typing_extensions=3.7.4.3
   - urllib3=1.25.11
   - vc=14.1
   - vs2015_runtime=14.16.27012
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
   - werkzeug=0.16.1
   - wheel=0.35.1
   - win_inet_pton=1.1.0
   - wincertstore=0.2
+  - winpty=0.4.3
   - wrapt=1.12.1
   - xlwt=1.3.0
   - xz=5.2.5
   - yaml=0.2.5
   - yarl=1.6.2
+  - zeromq=4.3.2
   - zfp=0.5.5
   - zipp=3.3.1
   - zlib=1.2.11
@@ -158,6 +204,12 @@ dependencies:
   - pip:
     - colour-demosaicing==0.1.5
     - colour-science==0.3.15
+    - cython==0.29.24
     - hmmlearn==0.2.4
-prefix: C:\Users\MARS\miniconda3\envs\mars
-
+    - kiwisolver==1.3.2
+    - marseval==1.0
+    - matplotlib==3.4.3
+    - numpy==1.21.2
+    - pillow==8.3.2
+    - setuptools==58.1.0
+prefix: C:\Users\MARS\Anaconda3\envs\mars
