--- a/mars_v1_8/config.yml
+++ b/mars_v1_8/config.yml
@@ -7,16 +7,16 @@ black_detector_top: models/detection/MARS_top_detection_black.pb
 white_detector_top: models/detection/MARS_top_detection_white.pb
 front_pose_model: models/pose/MARS_front_pose.pb
 top_pose_model: models/pose/MARS_top_pose.pb
-classifier_model: models/classifier/top_xgb_wnd
+classifier_model: models/classifier/good_clf
 
-# information about your videos.
-pixels_per_cm: 37.795
-framerate: 30
+# information about your videos. Set framerate=-1 to get the framerate value from the video file.
+pixels_per_cm: 1
+framerate: 20
 
 # which stages of analysis to run- pose estimation, feature extraction, and behavior classification
 # feature extraction is a required step if you wish to do behavior classification, and
 # pose estimation is a required step if you wish to do feature extraction.
-doPose: True
+doPose: False
 doFeats: True
 doActions: True
 
