--- a/mars_v1_8/config.yml
+++ b/mars_v1_8/config.yml
@@ -1,17 +1,15 @@
 # these are the default settings that MARS will use if you don't override them
 
 # relative paths to the models used for detection and pose estimation.
-black_detector_front: models/detection/MARS_front_detection_black.pb
-white_detector_front: models/detection/MARS_front_detection_white.pb
-black_detector_top: models/detection/MARS_top_detection_black.pb
-white_detector_top: models/detection/MARS_top_detection_white.pb
-front_pose_model: models/pose/MARS_front_pose.pb
-top_pose_model: models/pose/MARS_top_pose.pb
-classifier_model: models/classifier
+detector_front: ['models/detection/MARS_front_detection_black.pb','models/detection/MARS_front_detection_white.pb']
+detector_top: ['models/detection/MARS_top_detection_black.pb','models/detection/MARS_top_detection_white.pb']
+pose_front: ['models/pose/MARS_front_pose.pb']
+pose_top: ['models/pose/MARS_top_pose.pb']
+classifiers: models/classifier
 
 # information about your videos. Set framerate=-1 to get the framerate value from the video file.
 pixels_per_cm: 1
-framerate: 20
+framerate: -1
 num_mice: 1
 
 # which stages of analysis to run- pose estimation, feature extraction, and behavior classification
